--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "chart.js": "^1.1.1",
-    "react": "^16.8.6",
+    "json-server": "^0.16.1",
+    "react": "^16.13.1",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
